--- a/CasoSemana5/CasoSemana5/appsettings.json
+++ b/CasoSemana5/CasoSemana5/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MySqlConnection": "server=localhost;port=3306;database=restaurante_db;user=root;password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
